--- a/Backend/quiz-backend/src/main/resources/application.properties
+++ b/Backend/quiz-backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/quizdb
 spring.datasource.username=postgres
 spring.datasource.password=Pranjul@8376
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
