Adding before frontend working

--- a/Backend/quiz-backend/src/main/resources/application.properties
+++ b/Backend/quiz-backend/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=quiz-backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/quizdb
 spring.datasource.username=postgres
 spring.datasource.password=Pranjul@8376
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
