Configure server port for deployment

--- a/Backend/quiz-backend/src/main/resources/application.properties
+++ b/Backend/quiz-backend/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=quiz-backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/quizdb
-spring.datasource.username=postgres
-spring.datasource.password=Pranjul@8376
-spring.jpa.hibernate.ddl-auto=create
+
+# --- Neon Cloud PostgreSQL Connection Settings ---
+spring.datasource.url=jdbc:postgresql://ep-wandering-night-ad6nwx6n-pooler.c-2.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_Sb1AYUKhzgi7
+
+# --- JPA and Hibernate Settings ---
+# Changed to 'update' to preserve data on your cloud database after the first run.
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=${PORT:8080}
