Use environment variables for database

--- a/Backend/quiz-backend/src/main/resources/application.properties
+++ b/Backend/quiz-backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=quiz-backend
 
-# --- Neon Cloud PostgreSQL Connection Settings ---
-spring.datasource.url=jdbc:postgresql://ep-wandering-night-ad6nwx6n-pooler.c-2.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_Sb1AYUKhzgi7
+# Read database credentials from environment variables provided by Render
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-# --- JPA and Hibernate Settings ---
-# Changed to 'update' to preserve data on your cloud database after the first run.
+# Use 'update' to preserve data on your cloud database
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Use the port Render provides, defaulting to 8080 locally
 server.port=${PORT:8080}
